<?xml version="1.0"?>
<package format="2">
  <name>pmb2_automation</name>
  <version>0.0.0</version>
  <description>The pmb2_automation package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="ranvir@todo.todo">ranvir</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

</package>
