<?xml version="1.0"?>
<package format="2">
  <name>pmb2_automation</name>
  <version>0.2.0</version>
  <description>The pmb2_automation package</description>

  <maintainer email="rbrobots20@gmail.com">ranvir</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
